--- a/src/components/page-blocks/_main-promo.html
+++ b/src/components/page-blocks/_main-promo.html
@@ -7,7 +7,7 @@
         <div class="main-promo__wrapper">
             <div class="main-promo__features">
                 <p class="main-promo__text text--white">
-                    Современные окна
+                    Современные окна <br>
                     и балконные конструкции
                     по доступным ценам
                 </p>
@@ -21,7 +21,7 @@
             </div>
             <div class="main-promo__features">
                 <p class="main-promo__text text--white">
-                    Гарантия
+                    Гарантия <br>
                     высочайшего качества
                     нашей продукции
                 </p>
