--- a/src/components/page-blocks/_main-service.html
+++ b/src/components/page-blocks/_main-service.html
@@ -6,7 +6,7 @@
         <h3 class="service-title__inner title--middle">Установка пластиковых
           окон</h3>
         <p class="service-text">Устанавливаем пластиковые окна Rehau
-          от проверенного производителяс
+          от проверенного производителя с
           гарантией качества</p>
       </div>
     </a>
@@ -23,9 +23,9 @@
       <div class="service__block">
         <h3 class="service-title__inner title--middle">Остекление
           коттеджей и дач</h3>
-        <p class="service-text">Остекление и отделка под ключ:
+        <p class="service-text">Остекление и отделка под ключ:<br>
           от коттеджей и дач до террас
-          и беседок. Выделяем личного
+          и беседок. Выделяем личного<br>
           технолога под каждый объект</p>
       </div>
     </a>
@@ -34,8 +34,8 @@
         <h3 class="service-title__inner title--middle">Остекление
           корпоративных объектов
         </h3>
-        <p class="service-text">Реализуем сложные проекты
-          по остеклению торговых центров,
+        <p class="service-text">Реализуем сложные проекты <br>
+          по остеклению торговых центров, <br>
           ресторанов, производственных помещений
           и офисов</p>
       </div>
