--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -10,8 +10,8 @@
     </a>
     <nav class="maim-nav">
       <ul class="main-nav__list">
-        <li class="main-nav__item"><a href="#" class="main-nav__link main-nav__link--active">Услуги</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Продукция</a></li>
+        <li class="main-nav__item"><a href="#" class="main-nav__link">Услуги</a></li>
+        <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="#">Продукция</a></li>
         <li class="main-nav__item"><a class="main-nav__link" href="#">О компании</a></li>
         <li class="main-nav__item"><a class="main-nav__link" href="#">Портфолио</a></li>
         <li class="main-nav__item"><a class="main-nav__link" href="#">Вопрос-ответ</a></li>
