--- a/src/components/page-blocks/_footer.html
+++ b/src/components/page-blocks/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer__wrapper main-container">
     <div class="branded__block">
-      <a class="text--white" href="#"><img src="/img/Logo_svg.svg" width="54" height="39" alt="mini logo"></a>
+      <a class="text--white" href="#"><img src="/img/svg/logo_min.svg" width="54" height="39" alt="mini logo"></a>
       <span>© ООО “Окна Хаус”,
         2011 - 2022</span>
     </div>
