--- a/src/components/bem-blocks/_about-us-article.html
+++ b/src/components/bem-blocks/_about-us-article.html
@@ -8,7 +8,7 @@
   </ul>
   <div class="about-us__block-wrapper">
     <a class="about-us__logo-link" href="#">
-      <img src="/img/Big_logo.svg" width="198" height="140" alt="Big logo">
+      <img src="/img/svg/Big_logo.svg" width="198" height="140" alt="Большой логотип">
     </a>
     <p class="about-us__text">Мы помогаем клиентам подбирать решения, учитывая пожежелания к характеристикам окна и его
       стоимости. Окно - это
