--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -1,12 +1,8 @@
 <header class="header">
   <div class="header-wrapper main-container">
     <a href="#">
-      <picture>
-        <source media="(max-width: 767px)" srcset="/img/logo_1x.webp  1x,  img/logo_1x.webp 2x">
-        <source media="(max-width: 1200px)" srcset="/img/logo_1x_2  webp  1x, /img/logo_1x_2x.webp 2x">
-        <img class="" src="/img/logo_1x.png" srcset="/img/logo_1x_2x  webp   2x" width="89" height="63"
+        <img class="" src="/img/svg/svg_mid_logo.svg"width="89" height="63"
           alt="Окна в дом">
-      </picture>
     </a>
     <nav class="maim-nav">
       <ul class="main-nav__list">
