--- a/src/scss/base/_normalize.scss
+++ b/src/scss/base/_normalize.scss
@@ -237,7 +237,7 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-	outline: 1px dotted ButtonText;
+	outline: 0.052083333333333vw dotted ButtonText;
 }
 
 /**
@@ -316,7 +316,7 @@ textarea {
 [type="search"] {
 	-webkit-appearance: textfield;
 	/* 1 */
-	outline-offset: -2px;
+	outline-offset: -0.104166666666667vw;
 	/* 2 */
 }
 
