--- a/src/scss/block/_about-us-article.scss
+++ b/src/scss/block/_about-us-article.scss
@@ -1,5 +1,5 @@
 .about-us__title {
-  margin: 67px 0px 40px 531px;
+  margin: 3.489583333333333vw 0vw 2.083333333333333vw 27.65625vw;
 }
 
 .about-us__list {
@@ -7,17 +7,17 @@
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
-  gap: 10px;
-  margin-left: 250px;
+  gap: 0.520833333333333vw;
+  margin-left: 13.020833333333334vw;
   padding: 0;
 }
 
 .about-us__link {
-  margin: 0px 0px 0px 50px;
+  margin: 0vw 0vw 0vw 2.604166666666667vw;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 0.9375vw;
+  line-height: 1.09375vw;
   color: #000000;
 }
 
@@ -29,33 +29,33 @@
 .about-us__link:active {
   margin-top: 0;
   display: block;
-  padding: 10px 26px 10px 26px;
+  padding: 0.520833333333333vw 1.354166666666667vw 0.520833333333333vw 1.354166666666667vw;
   color: #ffffff;
   text-align: center;
   font-weight: bold;
   background-color: #EF7F04;
   border: 0;
-  border-radius: 3px;
+  border-radius: 0.15625vw;
   outline: 0;
 }
 
 .about-us__logo-link {
-  margin: 45px 0px 0px 50px;
+  margin: 2.34375vw 0vw 0vw 2.604166666666667vw;
   outline: 0;
 }
 
 .about-us__block-wrapper {
   display: grid;
-  grid-template-columns: 248px 357px 596px;
-  margin-top: 35px;
+  grid-template-columns: 12.916666666666666vw 18.59375vw 31.041666666666668vw;
+  margin-top: 1.822916666666667vw;
   background: #FFFFFF;
 }
 
 .about-us__block {
-  width: 600px;
+  width: 31.25vw;
 }
 
 .about-us__text {
-  margin: 248px 56px 0px 0px;
-  line-height: 22px;
+  margin: 12.916666666666666vw 2.916666666666667vw 0vw 0vw;
+  line-height: 1.145833333333333vw;
 }
