--- a/src/scss/block/_about-us.scss
+++ b/src/scss/block/_about-us.scss
@@ -1,69 +1,77 @@
 .about-us__wrapper {
   display: grid;
-  grid-template-columns: 400px 400px 400px;
-  grid-template-rows: 150px 150px;
-  gap: 20px;
-  margin: 57px 0px 70px 0px;
+  grid-template-columns: 20.833333333333332vw 20.833333333333332vw 20.833333333333332vw;
+  grid-template-rows: 7.8125vw 7.8125vw;
+  gap: 1.041666666666667vw;
+  margin: 2.96875vw 0vw 3.645833333333333vw 0vw;
 }
 
 .our-features {
-  width: 400px;
+  width: 20.833333333333332vw;
 }
 
 .our-features:nth-of-type(1) {
-  padding: 8px 0px 0px 151px;
-  background: url(/img/svg/svg_icon_professional.svg) no-repeat 41px 11px;
+  padding: 0.416666666666667vw 0vw 0vw 7.864583333333333vw;
+  background: url(/img/svg/svg_icon_professional.svg) no-repeat 2.135416666666667vw 0.572916666666667vw;
+  background-size: 4.479166666666667vw 4.114583333333333vw;
+  
 }
 
 .our-features:nth-of-type(2) {
-  padding: 7px 0px 0px 136px;
-  background: url(/img/svg/svg_icon_sale.svg) no-repeat 4px 9px;
+  padding: 0.364583333333333vw 0vw 0vw 7.083333333333333vw;
+  background: url(/img/svg/svg_icon_sale.svg) no-repeat 0.208333333333333vw 0.46875vw;
+  background-size: 5.833333333333333vw 4.114583333333333vw;
 }
 
 .our-features:nth-of-type(3) {
-  padding: 6px 90px 0px 122px;
-  background: url(/img/svg/svg_icon_contract.svg) no-repeat 12px 11px;
+  padding: 0.3125vw 4.6875vw 0vw 6.354166666666667vw;
+  background: url(/img/svg/svg_icon_contract.svg) no-repeat 0.625vw 0.572916666666667vw;
+  background-size: 4.270833333333333vw 4.84375vw;
 }
 
 .our-features:nth-of-type(4) {
-  padding: 51px 14px 0px 152px;
-  background: url(/img/svg/svg_icon_loyalty.svg) no-repeat 40px 57px;
+  padding: 2.65625vw 0.729166666666667vw 0vw 7.916666666666667vw;
+  background: url(/img/svg/svg_icon_loyalty.svg) no-repeat 2.083333333333333vw 2.96875vw;
+  background-size: 4.583333333333333vw 4.166666666666667vw;
 }
 
 .our-features:nth-of-type(5) {
-  padding: 50px 73px 0px 136px;
-  background: url(/img/svg/svg_icon_speed.svg) no-repeat 25px 54px;
+  padding: 2.604166666666667vw 3.802083333333333vw 0vw 7.083333333333333vw;
+  background: url(/img/svg/svg_icon_speed.svg) no-repeat 1.302083333333333vw 2.8125vw;
+  background-size: 4.21875vw 4.21875vw;
 }
 
 .our-features:nth-of-type(6) {
-  padding: 51px 91px 0px 123px;
-  background: url(/img/svg/svg_icon_quality_service.svg) no-repeat 11px 49px;
+  padding: 2.65625vw 4.739583333333333vw 0vw 6.40625vw;
+  background: url(/img/svg/svg_icon_quality_service.svg) no-repeat 0.572916666666667vw 2.552083333333333vw;
+  background-size: 4.21875vw 5.104166666666667vw;
 }
 
 .our-feauters__text {
-  margin-top: 11px;
+  margin-top: 0.572916666666667vw;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 26px;
+  font-size: 0.833333333333333vw;
+  line-height: 1.354166666666667vw;
 }
 
 .bth_arrange {
   display: block;
-  width: 312px;
-  height: 55px;
-  margin-left: 443px;
-  padding: 17px 32px 18px 72px;
+  width: 16.25vw;
+  height: 2.864583333333333vw;
+  margin-left: 23.072916666666668vw;
+  padding: 0.885416666666667vw 1.666666666666667vw 0.9375vw 3.75vw;
   text-align: center;
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 19px;
-  background: url(/img/svg/svg_icon_8.svg) no-repeat 26px 15px;
+  font-size: 0.833333333333333vw;
+  line-height: 0.989583333333333vw;
+  background: url(/img/svg/svg_icon_8.svg) no-repeat 1.354166666666667vw 0.78125vw;
+  background-size: 1.197916666666667vw 1.09375vw;
   border: 0;
-  border-radius: 3px;
+  border-radius: 0.15625vw;
   outline: 0;
 }
 
 .bth_arrange:active {
-  transform: translate(0, -1px);
+  transform: translate(0, -0.052083333333333vw);
 }
