--- a/src/scss/block/_main-form.scss
+++ b/src/scss/block/_main-form.scss
@@ -1,11 +1,11 @@
 .form__calling {
   position: absolute;
-  top: 68px;
-  left: 710px;
-  width: 406px;
+  top: 3.541666666666667vw;
+  left: 36.979166666666664vw;
+  width: 21.145833333333332vw;
   background: #FFFFFF;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  box-shadow: 0vw 0.208333333333333vw 0.3125vw rgba(0, 0, 0, 0.1);
+  border-radius: 0.520833333333333vw;
 }
 
 .form__calling--group {
@@ -17,24 +17,24 @@
 
 .form__calling--group::before {
   content: "";
-  width: 627px;
-  height: 139px;
-  top: 255px;
-  left: -87px;
+  width: 32.65625vw;
+  height: 7.239583333333333vw;
+  top: 13.28125vw;
+  left: -4.53125vw;
   position: absolute;
   background-repeat: no-repeat;
   background-position: 0 0;
   background-image: url("/img/roulette.webp");
-  background-size: 627px 139px;
+  background-size: 32.65625vw 7.239583333333333vw;
   z-index: 200;
 }
 
 .form__calling--title {
-  margin: 43px 83.5px 27px 82.5px;
+  margin: 2.239583333333333vw 4.348958333333333vw 1.40625vw 4.296875vw;
   font-style: normal;
   font-weight: 700;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 0.9375vw;
+  line-height: 1.09375vw;
   color: #2F2F51;
 }
 
@@ -43,17 +43,17 @@
 }
 
 .form__input {
-  margin: 0px 43px 15px 40px;
-  padding-left: 13px;
-  width: 322.5px;
-  height: 40px;
+  margin: 0vw 2.239583333333333vw 0.78125vw 2.083333333333333vw;
+  padding-left: 0.677083333333333vw;
+  width: 16.796875vw;
+  height: 2.083333333333333vw;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 0.729166666666667vw;
+  line-height: 0.833333333333333vw;
   background: #E2E2E2;
   border: 0;
-  border-radius: 3px;
+  border-radius: 0.15625vw;
   opacity: 0.8;
   outline:0;
 }
@@ -67,41 +67,43 @@
 }
 
 .form__input:focus{
-  box-shadow: 0px 0px 10px #E2E2E2;
+  box-shadow: 0vw 0vw 0.520833333333333vw #E2E2E2;
 }
 
 .form__input:last-child{
-  margin-bottom: 14px;
+  margin-bottom: 0.729166666666667vw;
 }
 
 .checkbox__label {
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 0.625vw;
+  line-height: 0.729166666666667vw;
 }
 
 .checkbox__input:not(:checked) + label::before {
   content: "";
   position: absolute;
-  top: 169px;
-  left: 41px;
-  width: 26px;
-  height: 26px;
+  top: 8.802083333333334vw;
+  left: 2.135416666666667vw;
+  width: 1.354166666666667vw;
+  height: 1.354166666666667vw;
   background-image: url("/img/svg/checkbox-off.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+  background-size: 1.354166666666667vw 1.354166666666667vw;
   opacity: 0.3;
 }
 
 .checkbox__input:checked + label::after {
   content: "";
   position: absolute;
-  top: 169px;
-  left: 41px;
-  width: 26px;
-  height: 26px;
+  top: 8.802083333333334vw;
+  left: 2.135416666666667vw;
+  width: 1.554166666666667vw;
+  height: 1.354166666666667vw;
   background-image: url("/img/svg/checkbox-on.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+  background-size: 1.554166666666667vw 1.354166666666667vw;
   opacity: 0.3;
 }
 
@@ -121,7 +123,7 @@
 }
 
 .form__input--wrapper:last-child{
-  margin: 0px 0px 17px 75px;
+  margin: 0vw 0vw 0.885416666666667vw 3.90625vw;
 }
 
 .checkbox__label--link {
@@ -133,6 +135,6 @@
 }
 
 .calling__btn{
-  margin: 0px 104px 66.5px 103px;
-  padding: 19px 45px;
+  margin: 0vw 5.416666666666667vw 3.463541666666667vw 5.364583333333333vw;
+  padding: 0.989583333333333vw 2.34375vw;
 }
