--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -1,8 +1,8 @@
 .visually-hidden {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  width: 0.052083333333333vw;
+  height: 0.052083333333333vw;
+  margin: -0.052083333333333vw;
   padding: 0;
   overflow: hidden;
   white-space: nowrap;
@@ -20,15 +20,17 @@
 }
 
 body {
-  max-width: 1920px;
+  max-width: 100vw;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  line-height: 19px;
+  font-size: 0.833333333333333vw;
+  line-height: 0.989583333333333vw;
   font-weight: normal;
   color: #000000;
   background: #F2F2F2;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 a {
@@ -42,10 +44,11 @@ ul {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 .main-container {
-  width: 1200px;
+  width: 62.5vw;
   margin: 0 auto;
   padding-right: 0;
   padding-left: 0;
@@ -113,21 +116,21 @@ h6 {
 .title--big {
   font-style: normal;
   font-weight: 100;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 1.875vw;
+  line-height: 2.1875vw;
 }
 
 .title--middle {
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 1.25vw;
+  line-height: 1.458333333333333vw;
 }
 
 .title--small {
   font-weight: 700;
-  font-size: 16px;
-  line-height: 26px;
+  font-size: 0.833333333333333vw;
+  line-height: 1.354166666666667vw;
   text-transform: uppercase;
 }
 
@@ -147,16 +150,16 @@ h6 {
   display: block;
   color: #ffffff;
   text-align: center;
-  font-size: 13px;
+  font-size: 0.677083333333333vw;
   font-weight: normal;
-  line-height: 15px;
+  line-height: 0.78125vw;
   border: 0;
-  border-radius: 3px;
+  border-radius: 0.15625vw;
   outline: 0;
 }
 
 .btn:active {
-  transform: translate(0, -1px);
+  transform: translate(0, -0.052083333333333vw);
 }
 
 .btn--orange {
@@ -165,11 +168,11 @@ h6 {
 
 .btn--orange:hover {
   background-color: #ff7b00;
-  box-shadow: 0px 0px 10px #EF7F04;
+  box-shadow: 0vw 0vw 0.520833333333333vw #EF7F04;
 }
 
 .btn--orange:focus {
-  box-shadow: 0px 0px 10px #EF7F04;
+  box-shadow: 0vw 0vw 0.520833333333333vw #EF7F04;
 }
 
 .btn--purple {
@@ -179,9 +182,9 @@ h6 {
 
 .btn--purple:hover {
   background-color: #474493;
-  box-shadow: 0px 0px 10px #3B3A63;
+  box-shadow: 0vw 0vw 0.520833333333333vw #3B3A63;
 }
 
 .btn--purple:focus {
-  box-shadow: 0px 0px 10px #3B3A63;
+  box-shadow: 0vw 0vw 0.520833333333333vw #3B3A63;
 }
