--- a/src/scss/block/_header.scss
+++ b/src/scss/block/_header.scss
@@ -49,11 +49,11 @@ header {
 }
 
 
-.main-nav__link:focus {
-  border-top: 0.208333333333333vw solid #EF7F04;
-  padding-top: 0.885416666666667vw;
-  color: #EF7F04;
-}
+// .main-nav__link:focus {
+//   border-top: 0.208333333333333vw solid #EF7F04;
+//   padding-top: 0.885416666666667vw;
+//   color: #EF7F04;
+// }
 
 .btn--application {
   width: 8.802083333333334vw;
