docs: добавил комментарий

--- a/src/scss/block/_main-form.scss
+++ b/src/scss/block/_main-form.scss
@@ -1,3 +1,5 @@
+// стили для формы
+
 .form__calling {
   position: absolute;
   top: 3.541666666666667vw;
@@ -138,3 +140,4 @@
   margin: 0vw 5.416666666666667vw 3.463541666666667vw 5.364583333333333vw;
   padding: 0.989583333333333vw 2.34375vw;
 }
+// ^стили формы
